--- a/2. Исследование рынка недвижимости/Исследование о квартирах.ipynb
+++ b/2. Исследование рынка недвижимости/Исследование о квартирах.ipynb
@@ -24,17 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -47,10 +38,7 @@
    },
    "outputs": [],
    "source": [
-    "try:\n",
-    "    data = pd.read_csv('/datasets/real_estate_data.csv', sep='\\t')\n",
-    "except:\n",
-    "    data = pd.read_csv('https://code.s3.yandex.net/datasets/real_estate_data.csv', sep='\\t')"
+    "data = pd.read_csv('/datasets/real_estate_data.csv', sep='\\t')"
    ]
   },
   {
