--- a/6. Анализ пользовательского поведения в приложении/Сборный.ipynb
+++ b/6. Анализ пользовательского поведения в приложении/Сборный.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e08e452d",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Откроем-файл-с-данными\" data-toc-modified-id=\"Откроем-файл-с-данными-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Откроем файл с данными</a></span></li><li><span><a href=\"#Подготовка-данных\" data-toc-modified-id=\"Подготовка-данных-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Подготовка данных</a></span></li><li><span><a href=\"#Изучим-и-проверим-данные\" data-toc-modified-id=\"Изучим-и-проверим-данные-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Изучим и проверим данные</a></span></li><li><span><a href=\"#Изучим-воронку-продаж\" data-toc-modified-id=\"Изучим-воронку-продаж-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Изучим воронку продаж</a></span></li><li><span><a href=\"#Изучим-результаты-эксперимента\" data-toc-modified-id=\"Изучим-результаты-эксперимента-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Изучим результаты эксперимента</a></span></li><li><span><a href=\"#Вывод\" data-toc-modified-id=\"Вывод-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>Вывод</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea0a9044",
    "metadata": {},
    "source": [
